# auto-finetune

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  app.py  finetune.py  pyproject.toml  test_e2e.py
.github/workflows/: ci.yml
_core/: __init__.py  agent_loop.py  config.py  data_prep.py  evaluator.py  hf_utils.py  llm_client.py  mlflow_utils.py  program_md_generator.py
examples/: commit_message_generation.json  email_urgency.json  invoice_extraction.json
tests/: test_agent_loop.py  test_config.py  test_data_prep.py  test_evaluator.py  test_llm_client.py  test_mlflow_utils.py  test_model_card.py  test_program_md_generator.py
