[project]
name = "auto-finetune"
version = "0.1.0"
description = "Autonomous LoRA fine-tuning with Claude-powered hyperparameter search"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "mlflow>=2.12.0",
    "anthropic>=0.25.0",
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[tool.uv]
# After cloning:
#   cp .env.example .env        # add your ANTHROPIC_API_KEY
#   uv sync                     # install all deps
#   streamlit run app.py        # launch the app
