[project]
name = "auto-finetune"
version = "0.1.0"
description = "Autonomous LoRA fine-tuning with Claude-powered hyperparameter search"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "mlflow>=2.12.0",
    "anthropic>=0.25.0",
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "F401",   # unused imports — too noisy for this codebase style
    "E741",   # ambiguous variable name (e.g. 'l') — not a real issue here
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["_core"]
omit = ["_core/evaluator.py"]  # model loading functions skipped in unit tests

[tool.uv]
# After cloning:
#   cp .env.example .env        # add your ANTHROPIC_API_KEY
#   uv sync --extra dev         # install all deps including dev tools
#   streamlit run app.py        # launch the app
